<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <com.vald3nir.core_ui.components.CustomNavigationComponent
        android:id="@+id/navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:nvTitle="@string/register"
        app:nvTitleColor="@color/secondary_color" />


    <TextView
        android:id="@+id/txv_description"
        style="@style/NormalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:text="Preencha as informações abaixo para criar sua conta no app."
        android:textColor="@color/secondary_color"
        app:layout_constraintBottom_toTopOf="@+id/sv_inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigator" />

    <ScrollView
        android:id="@+id/sv_inputs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:padding="@dimen/screen_margin"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_description">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_name_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/tell_your_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    style="@style/TextInputStyle"
                    tools:text="@string/tell_your_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_email_layout"
                style="@style/EmailInputLayoutStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/tell_your_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    style="@style/EmailInputStyle"
                    tools:text="@string/tell_your_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password_layout"
                style="@style/PasswordInputLayoutStyle"
                android:layout_marginTop="20dp"
                android:hint="@string/choose_a_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    style="@style/PasswordInputStyle"
                    tools:text="12345678" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_confirm_password_layout"
                style="@style/PasswordInputLayoutStyle"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_your_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_confirm_password"
                    style="@style/PasswordInputStyle"
                    tools:text="12345678" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.vald3nir.core_ui.components.LoadingButtonComponent
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="@dimen/screen_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lbBackgroundColor="@color/secondary_color"
        app:lbTitle="@string/register"
        app:lbTitleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>