<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <com.vald3nir.core_ui.components.atoms.CustomImageView
        android:id="@+id/imv_logo"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/screen_margin"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/secondary_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_logo" />

    <LinearLayout
        android:id="@+id/ll_inputs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/screen_margin"
        app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_layout"
            style="@style/EmailInputLayoutStyle"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                style="@style/EmailInputStyle"
                tools:text="vald3nir@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_layout"
            style="@style/PasswordInputLayoutStyle"
            android:layout_marginTop="@dimen/screen_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/PasswordInputStyle"
                tools:text="12345678" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/screen_margin"
            android:text="@string/remember_login"
            android:textColor="@color/secondary_color"
            android:theme="@style/checkbox_theme" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.vald3nir.core_ui.components.LoadingButtonComponent
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lbBackgroundColor="@color/secondary_color"
            app:lbTitle="@string/login"
            app:lbTitleColor="@color/white" />

        <com.vald3nir.core_ui.components.atoms.CustomButton
            android:id="@+id/btn_register"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/register"
            android:textColor="@color/secondary_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>